# kinora

./: .env.example  .gitignore  .npmrc  AGENTS.md  CLAUDE.md  DESIGN.md  GEMINI.md  LICENSE  Makefile  README.md  hackathon_description.md  kinora.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json  what-is-kinora.md
backend/: DESIGN.md  README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  composition.py  main.py
backend/app/agents/: __init__.py  adapter.py  base.py  cinematographer.py  continuity.py  contracts.py  critic.py  generator.py  prompts.py  showrunner.py
backend/app/analytics/: DESIGN.md  __init__.py  cohorts.py  engagement.py  events.py  funnel.py  query.py  retention.py  rollup.py  rollup_worker.py  scrub.py  service.py  sessionize.py  sink.py  sink_pg.py  store.py  store_pg.py  timebucket.py
backend/app/api/: __init__.py  deps.py  errors.py  middleware.py  schemas.py  security.py
backend/app/apihardening/: __init__.py  config.py  idempotency.py  install.py  openapi.py  pagination.py  problem.py  ratelimit.py  render.py  requestid.py  validation.py
backend/app/apispec/: __init__.py  __main__.py  cli.py  contract.py  diff.py  enricher.py  settings.py  tsclient.py
backend/app/assistant/: DESIGN.md  __init__.py  context.py  eval.py  grounding.py  intents.py  memory.py  prompts.py  read_model.py  retrieval.py  schemas.py  service.py  spoiler.py  suggest.py  synth.py  types.py
backend/app/audio/: __init__.py  alignment.py  protocol.py  router.py  seam.py  types.py
backend/app/audit/: DESIGN.md  __init__.py  chain.py  db.py  db_models.py  events.py  query.py  redaction.py  registry.py  service.py  store.py  taxonomy.py
backend/app/auth/: DESIGN.md  __init__.py  deps.py  errors.py  lockout.py  middleware.py  rbac.py  repositories.py  service.py  tokens.py
backend/app/autoscale/: __init__.py  actuator.py  clock.py  controller.py  lanes.py  service.py  signal.py  simulator.py
backend/app/billing/: DESIGN.md  __init__.py  audit.py  catalog.py  coupons.py  default_catalog.py  dunning.py  entitlements.py  enums.py  errors.py  hydration.py  invoicing.py  metering.py  models.py  money.py  period_billing.py  proration.py  repositories.py  routes.py  schemas.py  seed.py  service.py  tax.py  webhooks.py
backend/app/cache/: DESIGN.md  __init__.py  cache.py  clock.py  codecs.py  decorator.py  entry.py  errors.py  factory.py  integration.py  interface.py  keys.py  memory.py  metrics.py  null.py  redis_backend.py  singleflight.py  tiered.py
backend/app/cdn/: __init__.py  adapters.py  cache.py  errors.py  prefetch.py  protocols.py  regions.py  replication.py  resolver.py  signing.py  testing.py
backend/app/chaos/: __init__.py  clock.py  experiment.py  faults.py  gate.py  interceptor.py  report.py  runner.py  scenarios.py  steady_state.py
backend/app/cli/: DESIGN.md  __init__.py  __main__.py  context.py  errors.py  formatting.py  main.py  output.py
backend/app/compliance/: DESIGN.md  __init__.py  clock.py  enums.py  errors.py  service.py
backend/app/configmgmt/: DESIGN.md  __init__.py  errors.py  profiles.py  redaction.py  safety.py  secrets.py  validator.py
backend/app/core/: __init__.py  config.py  logging.py  security.py
backend/app/datalayer/: __init__.py  checkpoints.py  consistency.py  envelope.py  models.py  projector.py  readmodel.py  registry.py
backend/app/dataportability/: DESIGN.md  __init__.py  account.py  backup.py  blobs.py  book_export.py  book_import.py  canon_export.py  canon_import.py  codec.py  dbio.py  errors.py  idremap.py  keys.py  manifest.py  migrate.py  scrub.py  serialization.py  service.py
backend/app/datascale/: __init__.py
backend/app/db/: DESIGN.md  __init__.py  base.py  bulk.py  engine.py  hashing.py  health.py  inspect.py  migration_safety.py  mixins.py  query.py  retry.py  routing.py  session.py  unit_of_work.py
backend/app/delivery/: DESIGN.md  __init__.py  dash.py  errors.py  hls.py  ladder.py  manifest.py  models.py  packager.py  profiles.py  segmenter.py  signing.py
backend/app/distributed/: DESIGN.md  __init__.py
backend/app/dr/: __init__.py  accounting.py  checksums.py  config.py  errors.py  interfaces.py  manifest.py  models.py  pitr.py  restore.py  retention.py  service.py  snapshot.py  tiers.py
backend/app/e2e/: __init__.py  assertions.py  clock.py  fakes.py  scenarios.py  synthetic_book.py  trace.py  world.py
backend/app/embeddings/: DESIGN.md  __init__.py  cache.py  config.py  embedder.py  identity.py  index.py  maintenance.py  models.py  service.py  vectors.py
backend/app/eval/: __init__.py  baseline.py  buffer_trace.py  harness.py  metrics.py  run.py
backend/migrations/: env.py
backend/scripts/: kinora_admin.py  probe_modelscope_video.py  provider_preflight.py  qa_campaign_report.py  seed_demo.py  seed_demo_books.py  seed_e2e.py  seed_library.py  seed_library_100.py  seed_minimal_book.py  seed_public_domain.py  seed_public_domain_direct.py  simulate_conflict.py  user_walkthrough.py
backend/tests/: assistant_fakes.py  conftest.py  frontier_video_helpers.py  lakehouse_fixtures.py  moderation_db.py  privacy_fakes.py  test_agents_adapter.py  test_agents_adapter_comprehension.py  test_agents_base.py  test_agents_cinematographer.py  test_agents_continuity.py  test_agents_critic.py  test_agents_critic_reward.py  test_agents_generator.py  test_agents_live_smoke.py  test_agents_series.py  test_agents_showrunner.py  test_agents_support.py  test_analytics_cohorts.py  test_analytics_engagement.py  test_analytics_events.py  test_analytics_funnel.py  test_analytics_query.py  test_analytics_repo_db.py  test_analytics_retention.py  test_analytics_rollup.py  test_analytics_rollup_job.py  test_analytics_scrub.py  test_analytics_service.py  test_analytics_sessionize.py  test_analytics_store.py  test_analytics_timebucket.py  test_api_analytics.py  test_api_assistant.py  test_api_auth.py  test_api_auth_security.py  test_api_books.py  test_api_compliance.py  test_api_composition.py  test_api_director.py  (+701 more)
clients/python/: .gitignore  README.md  pyproject.toml
(+3230 files in other folders)
