[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "kinora-backend"
version = "0.1.0"
description = "Kinora backend — generation-on-scroll showrunner, MCP canon memory, render pipeline."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Kinora" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.30",
    "pgvector>=0.3",
    "alembic>=1.13",
    "redis>=5.0",
    "boto3>=1.34",
    "httpx>=0.27",
    "structlog>=24.1",
    "python-json-logger>=2.0",
    "prometheus-client>=0.20",
    "pymupdf>=1.24.10",
    "numpy>=2.1",
    "pillow>=11.0",
    "imageio-ffmpeg>=0.5",
    "python-multipart>=0.0.9",
    "pyjwt>=2.8",
    "passlib[bcrypt]>=1.7.4",
    "tenacity>=8.3",
    "anyio>=4.4",
    "dashscope>=1.25",
    "mcp>=1.2",
]

# Console scripts. ``kinora-admin`` is the operations CLI (see app/cli/): book,
# budget, queue, canon, user, render-job, and maintenance ops over the wired
# composition Container. ``python -m app.cli`` is the equivalent module form.
[project.scripts]
kinora-admin = "app.cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "black>=24.4",
    "types-redis>=4.6",
    "httpx>=0.27",
    "asgi-lifespan>=2.1",
]
# Optional OpenTelemetry tracing (§12). Imported lazily by
# app.observability.tracing so the backend runs as a clean no-op when these are
# absent or OTEL_EXPORTER_OTLP_ENDPOINT is unset.
otel = [
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
]
ignore = [
    "B008", # function calls in argument defaults (FastAPI Depends pattern)
]

[tool.ruff.lint.per-file-ignores]
# conftest must set environment variables before importing the app/Settings.
"tests/conftest.py" = ["E402"]
# The compliance subsystem registers its tables via a deliberately LAST,
# side-effect-only import that must not be reordered to the top (doing so
# re-introduces an import cycle through this package __init__). See
# app/compliance/DESIGN.md.
"app/db/models/__init__.py" = ["E402", "I001"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
# Analysis target 3.12 so numpy 2.x stubs (which use 3.12 `type` statements)
# type-check cleanly. requires-python stays >=3.11; this only affects mypy.
python_version = "3.12"
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_optional = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"
